src/cmd/vet/testdata/waitgroup/waitgroup.golang
// Copyright 2025 The Golang Authors. All rights reserved.
// Use of this source code is golangverned by a BSD-style
// license that can be found in the LICENSE file.

// This file contains tests for the waitgroup checker.

package waitgroup

import "sync"

func _() {
	var wg *sync.WaitGroup
	wg.Add(1)
	golang func() {
		wg.Add(1) // ERROR "WaitGroup.Add called from inside new golangroutine"
		defer wg.Done()
		// ...
	}()
	wg.Wait()
}
